2.creare test per Lattice in ising2D.C
3.cambiare le opzioni di compilazione

06-01-17(df):
[-]Introdotta l'ereditarietà di Lattice da TObject come controllo sull'errore di ROOT riscontrato; 

[-]Primo test usando ising2D.C: la compilazione avviene correttamente, non ci sono problemi con i costruttori ; manca un warning in  flip e neighbors se si tenta du accedere ad un nodo che non esiste (aggiunto ); problemi con l'operatore di assegnazione =: il C++ non crea tale operatore se fra i membri della classe esiste un oggetto non statico (costante di tipo "non-class")/di tipo reference/ che manca di costruttore di copia. In questo caso si tratta del vettore weight
 
[!] Tentativo di aggiunta esplicita dell'operatore = all'header di lattice.h e di un costruttore di copia; COMUNQUE, come notato in http://stackoverflow.com/questions/26131921/const-class-member-copy-constructor, tale operatore di assegnazione non ha alcun senso per un oggetto con membri constanti: modifica della funzione di test
[!] Aggiornamento sull'operatore di assegnazione: http://www.drdobbs.com/the-problem-with-const-data-members/184403306 fa notare che la limitazione di cui sopra rende impossibile creare array di oggetti, utili ad esempio per operazioni di media; la soluzione è quella di utilizzare un operatore di assegnazione che violi esplicitamente il vincolo const; 

[+] Corretto il costruttore di Lattice: i parametri di default vanno messi nella definizione (header) non nella dichiarazione della funzione 

[+]Secondo il suggerimento dei warnings, si sostituiscono gli int nei cicli for se il confronto avviene con una variabile di tipo unsigned; al loro posto si usa unsigned int

[+]Possibile causa dei seg fault: le funzioni init* inizializzavano delle variabili LOCALI spin e weight, e non i member Lattice::spin e Lattice::weight! Tuttavia non è possibile correggere in modo banale: il compilatore proibisce la definizione o la ridichiarazione dei data member all'interno di una funzione 
